syntax = "proto3";

option go_package = "knoway.dev/api/v1alpha1";

import "google/protobuf/struct.proto";

message LLMBackendSpec {
  string modelName = 1;
  string provider = 2;
  string secretRef = 3;
  repeated LLMBackendFilter filters = 4;
}

message UsageStatsConfig {
  string address = 1;
}

message OpenAIModelNameRewriteConfig {
  string modelName = 2;
}

message LLMBackendFilter {
  string name = 1 ;
  string type = 2;
  UsageStatsConfig usageStatsConfig = 3;
  OpenAIModelNameRewriteConfig rewriteConfig = 4;
}

message LLMBackendStatus {
  string phase = 1;
}
